Update pageUrl to the live site URL

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       whatsappText: "Hallo! Ich habe eine Frage zu euren Produkten.",
 
       // WICHTIG: Hier kommt später die echte URL rein, nachdem du die Seite veröffentlicht hast
-      pageUrl: "https://DEINE-SEITE-URL-HIER-EINTRAGEN"
+      pageUrl: "https://momoking01.github.io/ALF-MARKET-3/"
     };
 
     // =========================
