Update Google Maps URL in index.html

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
   whatsappNumber: "4917612345678",
   whatsappText: "Hallo! Ich habe eine Frage zu euren Produkten.",
 
-  googleMapsUrl: "HIER_DEIN_MAPS_LINK",
+  googleMapsUrl: "https://maps.app.goo.gl/UPWtTNLFhSSY2z4E8",
 
   pageUrl: "https://momoking01.github.io/ALF-MARKT-4/"
 };
